Feat: fragmented form inputs

--- a/src/index.css
+++ b/src/index.css
@@ -20,24 +20,26 @@ code {
 @font-face {
   font-family: "Montserrat";
   font-weight: 400;
-  src: url("./assets/fonts/Montserrat/static/Montserrat-Regular.ttf")
-    format("truetype");
+  src: url("./assets/fonts/Montserrat/static/Montserrat-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Montserrat";
   font-weight: 700;
-  src: url("./assets/fonts/Montserrat/static/Montserrat-Bold.ttf")
-    format("truetype");
+  src: url("./assets/fonts/Montserrat/static/Montserrat-Bold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Montserrat";
   font-weight: 900;
-  src: url("./assets/fonts/Montserrat/static/Montserrat-Black.ttf")
-    format("truetype");
+  src: url("./assets/fonts/Montserrat/static/Montserrat-Black.ttf") format("truetype");
 }
 
 body {
   font-family: "Montserrat";
+}
+
+.alertGuide {
+  background-color: rgb(173, 230, 230);
+  margin-top: 1rem;
 }
