--- a/src/assets/stylesheets/login.css
+++ b/src/assets/stylesheets/login.css
@@ -3,9 +3,7 @@
 }
 
 .loginBackground {
-  background-image: url("../images/authbgblur.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("../images/version2Designs/zak-7wBFsHWQDlk-unsplash.jpg");
 }
 
 .form-container {
