--- a/src/assets/stylesheets/signup.css
+++ b/src/assets/stylesheets/signup.css
@@ -2,10 +2,8 @@
     height: 15rem;
 }
 
-.loginBackground {
-    background-image: url("../images/authbgblur.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+.signUpBackground {
+    background-image: url("../images/version2Designs/zak-7wBFsHWQDlk-unsplash.jpg");
 }
 
 .form-container-signup {
